# rust

API/: Cargo.toml
API/src/: main.rs  tweet.rs
chat-app/: Cargo.toml  Rocket.toml
chat-app/src/: main.rs
chat-app/static/: index.html  reset.css  script.js
converter/src/: main.rs
docs/doc/lib/: all.html  index.html
docs/doc/src/lib/: lib.rs.html
guessing_game/src/: main.rs
minigrep/src/: lib.rs  main.rs
shirt-company/src/: main.rs
slices/src/: main.rs
squares/src/: main.rs
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs
structures/src/: main.rs
test-surrealdb/: Cargo.toml
test-surrealdb/src/: main.rs
ui/: index.html
variables/src/: main.rs
yew-test/: Cargo.toml  index.html
yew-test/src/: main.rs
