[package]
name = "test-surrealdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = "1.0.0-beta.8"

tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
anyhow = "1"
serde = {version = "1.0", features = ["derive"]}
